fix alignment

--- a/src/views/Chat/components/OrderInfoTab.scss
+++ b/src/views/Chat/components/OrderInfoTab.scss
@@ -11,11 +11,13 @@
 }
 
 .order-info-eta-info {
+  white-space: nowrap;
   font-family: Muli;
   font-size: 12px;
   font-weight: bold;
   font-stretch: normal;
   font-style: normal;
+  width: 70px;
   line-height: 1.33;
   letter-spacing: normal;
   text-align: left;
@@ -96,6 +98,7 @@
 .order-info-input-noborder{
 font-size: 10px;
   border: 0;
+  padding-left: 0;
   border-radius: 0;
   &:hover {
     color: #679def;
